cleaned notes, only contains the definition of the 2nd model

--- a/benchmark-ph1ex2/notes.ipynb
+++ b/benchmark-ph1ex2/notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Second Model \n",
+    "\n",
+    "## Geometric definition"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,156 +99,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[88.51 90.53 92.56]\n",
-      "[105.11 106.83 108.54]\n",
-      "[121.15 123.14 125.12]\n",
-      "[137.71 139.46 141.21]\n",
-      "[152.7  154.28 155.87]\n",
-      "[166.15 167.6  169.06]\n"
+      "310.6\n"
      ]
     }
    ],
    "source": [
-    "# Fuel radius\n",
-    "Af = 210*np.pi*0.6225**2\n",
-    "AfR1 = 18*Af/2\n",
-    "AfR2 = 24*Af/2\n",
-    "AfR3 = 24*Af/2\n",
+    "# RPV\n",
+    "t = 340.8-327.5  #cm\n",
+    "R = 297.3 + t\n",
+    "print(R)\n",
     "\n",
-    "# R1\n",
-    "print(np.round(calc_Rs(RIR, midR1, AfR1), 2))\n",
-    "print(np.round(calc_Rs(midR1, RR1, AfR1), 2))\n",
-    "\n",
-    "# R2\n",
-    "print(np.round(calc_Rs(RR1, midR2, AfR2), 2))\n",
-    "print(np.round(calc_Rs(midR2, RR2, AfR2), 2))\n",
-    "\n",
-    "# R3\n",
-    "print(np.round(calc_Rs(RR2, midR3, AfR3), 2))\n",
-    "print(np.round(calc_Rs(midR3, RR3, AfR3), 2))"
+    "k = 40.0 # W/m/K"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## assembly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assembly radius:  18.90135244455595\n",
-      "[ 7.39  9.45 11.52]\n",
-      "[2.57 4.73 6.88]\n",
-      "[13.46 14.18 14.89]\n"
-     ]
-    }
-   ],
-   "source": [
-    "P = 18  # cm\n",
-    "F = P/np.cos(np.pi/6)\n",
-    "AF = F/2 * P * 6\n",
-    "Ac = 120*np.pi*0.794**2 + 6*np.pi*0.635**2\n",
-    "Af = 210*np.pi*0.6225**2\n",
-    "\n",
-    "R = np.sqrt(1/np.pi*AF)\n",
-    "print('Assembly radius: ', R)\n",
-    "\n",
-    "_, midR, _ = calc_Rs(0, R, Ac)\n",
-    "print(np.round(calc_Rs(0, R, Ac), 2))\n",
-    "\n",
-    "print(np.round(calc_Rs(0, midR, Af/2), 2))\n",
-    "print(np.round(calc_Rs(midR, R, Af/2), 2))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## simple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ring one power density:  6.72835\n",
-      "Ring two power density:  5.3755250000000006\n",
-      "Ring three power density:  5.9632875\n",
-      "Ring one adjusted power density:  8.609844851899053\n",
-      "Ring two adjusted power density:  6.878720079589299\n",
-      "Ring three adjusted power density:  7.630842655668771\n"
-     ]
-    }
-   ],
-   "source": [
-    "# power density\n",
-    "file = pd.read_csv('power.csv')\n",
-    "\n",
-    "# W/cm3\n",
-    "R1Fs = []\n",
-    "for i in range(1, 7):\n",
-    "    fi = np.array(file['F'+str(i)].tolist())\n",
-    "    R1Fs.append(np.average(fi)/1e6)\n",
-    "R1F = np.average(np.array(R1Fs))\n",
-    "\n",
-    "R2Fs = []\n",
-    "for i in range(7, 15):\n",
-    "    fi = np.array(file['F'+str(i)].tolist())\n",
-    "    R2Fs.append(np.average(fi)/1e6)\n",
-    "R2F = np.average(np.array(R2Fs))\n",
-    "\n",
-    "R3Fs = []\n",
-    "for i in range(15, 23):\n",
-    "    fi = np.array(file['F'+str(i)].tolist())\n",
-    "    R3Fs.append(np.average(fi)/1e6)\n",
-    "R3F = np.average(np.array(R3Fs))\n",
-    "\n",
-    "print('Ring one power density: ', R1F)\n",
-    "print('Ring two power density: ', R2F)\n",
-    "print('Ring three power density: ', R3F)\n",
-    "\n",
-    "# Rings radius\n",
-    "P = 18  # cm\n",
-    "F = P/np.cos(np.pi/6)\n",
-    "AF = F/2 * P * 6\n",
-    "\n",
-    "AIR = 19*AF\n",
-    "AR1 = 18*AF\n",
-    "AR2 = 24*AF\n",
-    "AR3 = 24*AF\n",
-    "\n",
-    "# Coolant channel radii\n",
-    "Ac = 120*np.pi*0.794**2 + 6*np.pi*0.635**2\n",
-    "AcR1 = 18*Ac\n",
-    "AcR2 = 24*Ac\n",
-    "AcR3 = 24*Ac\n",
-    "\n",
-    "QR1 = R1F*AR1/(AR1-AcR1)\n",
-    "QR2 = R2F*AR2/(AR2-AcR2)\n",
-    "QR3 = R3F*AR3/(AR3-AcR3)\n",
-    "print('Ring one adjusted power density: ', QR1)\n",
-    "print('Ring two adjusted power density: ', QR2)\n",
-    "print('Ring three adjusted power density: ', QR3)"
+    "## Power density"
    ]
   },
   {
@@ -286,6 +170,13 @@
     "print('Ring one power density: ', QR1s)\n",
     "print('Ring two power density: ', QR2s)\n",
     "print('Ring three power density: ', QR3s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Coolant properties"
    ]
   },
   {
@@ -388,112 +279,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 51,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "310.6\n"
-     ]
-    }
-   ],
    "source": [
-    "# RPV\n",
-    "t = 340.8-327.5  #cm\n",
-    "R = 297.3 + t\n",
-    "print(R)\n",
-    "\n",
-    "k = 40.0 # W/m/K"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.93034972e+12 5.29114367e+12 6.55787056e+12 7.06341112e+12\n",
-      " 7.19171931e+12 6.68340332e+12 5.94501959e+12 5.36866520e+12\n",
-      " 4.89446021e+12 4.44624417e+12]\n",
-      "[610.37829168 784.13588871 826.44379254 841.28510071 844.59523238\n",
-      " 828.85613482 804.59468672 784.1354499  766.10482122 747.88706177]\n",
-      "[2.8075759  3.74924038 4.20171474 4.49746544 4.71331298 4.87263138\n",
-      " 5.00402145 5.11217806 5.20399827 5.28049018]\n",
-      "4.544262877865347\n"
-     ]
-    }
-   ],
-   "source": [
-    "# simple - outer film bc\n",
-    "\n",
-    "g = 9.8  # m/s^2\n",
-    "Tinf = 30  # C: room temperature\n",
-    "Tsl = np.array([50, 100, 150, 200, 250, 300, 350, 400, 450, 500])  # Twall\n",
-    "L = 200+793+120  # cm\n",
-    "L /= 100 # m\n",
-    "\n",
-    "# data from table A-9 cengel, 1 atm pressure\n",
-    "templ = np.array([50, 100, 150, 200, 250, 300, 350, 400, 450, 500])  # C\n",
-    "nul = np.array([1.798e-5, 2.306e-5, 2.745e-5, 3.455e-5, 4.091e-5, 4.765e-5, 5.475e-5, 6.219e-5, 6.997e-5, 7.806e-5])  # m^2/s\n",
-    "Prl = np.array([0.7228, 0.7111, 0.7041, 0.6974, 0.6946, 0.6935, 0.6937, 0.6948, 0.6965, 0.6986])\n",
-    "Tf = 0.5*(Tsl+Tinf)\n",
-    "\n",
-    "nu = np.interp(Tf, templ, nul)\n",
-    "beta = 1/(Tf+273)  # ideal gas assumption\n",
-    "\n",
-    "# formula 9-16 from Cengel - Heat transfer\n",
-    "Gr = g*beta*(Tsl-Tinf)*L**3/nu**2\n",
-    "# D = 297.3*2  # cm\n",
-    "# L *= 100 # cm\n",
-    "# Dt = 35*L/Gr**0.25\n",
-    "# print(Dt) # is D > Dt? Dt < D\n",
-    "# can't use the vertical plat approximation\n",
-    "# need to go to Cebeci 1974\n",
-    "\n",
-    "Pr = np.interp(Tf, templ, Prl)\n",
-    "Ra = Gr * Pr\n",
-    "print(Ra)\n",
-    "\n",
-    "# same correlation for isothermal and constant heat flux\n",
-    "# from Laminar Natural Convection From Isothermal Vertical Cylinders: Revistinga Classical Subject\n",
-    "D = 297.3*2/100  # m\n",
-    "\n",
-    "Nufp = 0.68 + 0.67*Ra**0.25/(1+(0.492/Pr)**(9/16))**(4/9)\n",
-    "# print(Nufp)\n",
-    "Nu = (1 + 0.3*(32**0.5/Gr**0.25*L/D)**0.909)*Nufp\n",
-    "print(Nu)\n",
-    "\n",
-    "kl = [0.02735, 0.03095, 0.03374, 0.03779, 0.04104, 0.04418, 0.04721, 0.05015, 0.05298, 0.05572]  # W/m/K\n",
-    "k = np.interp(Tf, templ, kl)\n",
-    "h = Nu*k/D\n",
-    "print(h)  # W/m2/K\n",
-    "print(np.average(h))  # W/m2/K"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "29.539036746538077\n"
-     ]
-    }
-   ],
-   "source": [
-    "# unitcell - R1 - power density\n",
-    "Af = 210*np.pi*0.6225**2\n",
-    "Qf = R1F*AR1/18/Af\n",
-    "print(Qf)"
+    "## Unit cell model definition"
    ]
   },
   {
@@ -571,13 +360,6 @@
     "kgc = h * (rc + dr) * np.log(1 + dr/rc)\n",
     "print('kgc: ', kgc)  # W/cm/C"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
