added geometric definition to notes.ipynb

--- a/benchmark-ph1ex2/notes.ipynb
+++ b/benchmark-ph1ex2/notes.ipynb
@@ -12,8 +12,79 @@
     "def calc_Rs(R1, R2, A):\n",
     "    midR = (R1+R2)/2\n",
     "    Ro = (A/np.pi+4*midR**2)/4/midR\n",
-    "    Ri = 2*midR - Ro   \n",
+    "    Ri = 2*midR - Ro\n",
     "    return Ri, midR, Ro"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First Model\n",
+    "\n",
+    "## Geometric definition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RIR1:  18.9\n",
+      "RIR2:  50.01\n",
+      "RIR3:  82.39\n",
+      "RFR1:  114.97\n",
+      "RFR2:  147.62\n",
+      "RFR3:  174.26\n",
+      "ROR1:  207.91\n",
+      "ROR2:  241.32\n",
+      "ROR3:  297.3\n",
+      "RPV:  310.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rings radius\n",
+    "P = 18  # cm\n",
+    "F = P/np.cos(np.pi/6)\n",
+    "AF = F/2 * P * 6\n",
+    "\n",
+    "AIR1 = AF\n",
+    "AIR2 = 6*AF\n",
+    "AIR3 = 12*AF\n",
+    "AFR1 = 18*AF\n",
+    "AFR2 = 24*AF\n",
+    "AFR3 = 24*AF\n",
+    "AOR1 = 36*AF\n",
+    "AOR2 = 42*AF\n",
+    "\n",
+    "RIR1 = np.sqrt(1/np.pi*AIR1)\n",
+    "print('RIR1: ', np.round(RIR1, 2))\n",
+    "RIR2 = np.sqrt(1/np.pi*(AIR1+AIR2))\n",
+    "print('RIR2: ', np.round(RIR2, 2))\n",
+    "RIR3 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3))\n",
+    "print('RIR3: ', np.round(RIR3, 2))\n",
+    "RFR1 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3+AFR1))\n",
+    "print('RFR1: ', np.round(RFR1, 2))\n",
+    "RFR2 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3+AFR1+AFR2))\n",
+    "print('RFR2: ', np.round(RFR2, 2))\n",
+    "RFR3 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3+AFR1+AFR2+AFR3))\n",
+    "print('RFR3: ', np.round(RFR3, 2))\n",
+    "ROR1 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3+AFR1+AFR2+AFR3+AOR1))\n",
+    "print('ROR1: ', np.round(ROR1, 2))\n",
+    "ROR2 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3+AFR1+AFR2+AFR3+AOR1+AOR2))\n",
+    "print('ROR2: ', np.round(ROR2, 2))\n",
+    "\n",
+    "print('ROR3: ', 297.3)\n",
+    "\n",
+    "# RPV\n",
+    "t = 340.8-327.5  #cm\n",
+    "R = 297.3 + t\n",
+    "print('RPV: ', R)"
    ]
   },
   {
@@ -99,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -114,9 +185,7 @@
     "# RPV\n",
     "t = 340.8-327.5  #cm\n",
     "R = 297.3 + t\n",
-    "print(R)\n",
-    "\n",
-    "k = 40.0 # W/m/K"
+    "print(R)"
    ]
   },
   {
