added geometric specification of the first model

--- a/benchmark-ph1ex2/notes.ipynb
+++ b/benchmark-ph1ex2/notes.ipynb
@@ -27,23 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RIR1:  18.9\n",
-      "RIR2:  50.01\n",
-      "RIR3:  82.39\n",
-      "RFR1:  114.97\n",
-      "RFR2:  147.62\n",
-      "RFR3:  174.26\n",
-      "ROR1:  207.91\n",
-      "ROR2:  241.32\n",
-      "ROR3:  297.3\n",
-      "RPV:  310.6\n"
+      "IRR1:  18.9\n",
+      "IRR2:  50.01\n",
+      "IRR3:  82.39\n",
+      "FR1:  114.97\n",
+      "FR2:  147.62\n",
+      "FR3:  174.26\n",
+      "ORR1:  207.91\n",
+      "ORR2:  241.32\n"
      ]
     }
    ],
@@ -53,38 +51,199 @@
     "F = P/np.cos(np.pi/6)\n",
     "AF = F/2 * P * 6\n",
     "\n",
-    "AIR1 = AF\n",
-    "AIR2 = 6*AF\n",
-    "AIR3 = 12*AF\n",
+    "AIRR1 = AF\n",
+    "AIRR2 = 6*AF\n",
+    "AIRR3 = 12*AF\n",
     "AFR1 = 18*AF\n",
     "AFR2 = 24*AF\n",
     "AFR3 = 24*AF\n",
-    "AOR1 = 36*AF\n",
-    "AOR2 = 42*AF\n",
+    "AORR1 = 36*AF\n",
+    "AORR2 = 42*AF\n",
     "\n",
-    "RIR1 = np.sqrt(1/np.pi*AIR1)\n",
-    "print('RIR1: ', np.round(RIR1, 2))\n",
-    "RIR2 = np.sqrt(1/np.pi*(AIR1+AIR2))\n",
-    "print('RIR2: ', np.round(RIR2, 2))\n",
-    "RIR3 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3))\n",
-    "print('RIR3: ', np.round(RIR3, 2))\n",
-    "RFR1 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3+AFR1))\n",
-    "print('RFR1: ', np.round(RFR1, 2))\n",
-    "RFR2 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3+AFR1+AFR2))\n",
-    "print('RFR2: ', np.round(RFR2, 2))\n",
-    "RFR3 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3+AFR1+AFR2+AFR3))\n",
-    "print('RFR3: ', np.round(RFR3, 2))\n",
-    "ROR1 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3+AFR1+AFR2+AFR3+AOR1))\n",
-    "print('ROR1: ', np.round(ROR1, 2))\n",
-    "ROR2 = np.sqrt(1/np.pi*(AIR1+AIR2+AIR3+AFR1+AFR2+AFR3+AOR1+AOR2))\n",
-    "print('ROR2: ', np.round(ROR2, 2))\n",
+    "R = []\n",
     "\n",
-    "print('ROR3: ', 297.3)\n",
+    "Ai = AIRR1\n",
+    "IRR1 = np.sqrt(1/np.pi*Ai)\n",
+    "R.append(IRR1)\n",
+    "print('IRR1: ', np.round(IRR1, 2))\n",
     "\n",
-    "# RPV\n",
-    "t = 340.8-327.5  #cm\n",
-    "R = 297.3 + t\n",
-    "print('RPV: ', R)"
+    "Ai += AIRR2\n",
+    "IRR2 = np.sqrt(1/np.pi*Ai)\n",
+    "R.append(IRR2)\n",
+    "print('IRR2: ', np.round(IRR2, 2))\n",
+    "\n",
+    "Ai += AIRR3\n",
+    "IRR3 = np.sqrt(1/np.pi*Ai)\n",
+    "R.append(IRR3)\n",
+    "print('IRR3: ', np.round(IRR3, 2))\n",
+    "\n",
+    "Ai += AFR1\n",
+    "FR1 = np.sqrt(1/np.pi*Ai)\n",
+    "R.append(FR1)\n",
+    "print('FR1: ', np.round(FR1, 2))\n",
+    "\n",
+    "Ai += AFR2\n",
+    "FR2 = np.sqrt(1/np.pi*Ai)\n",
+    "R.append(FR2)\n",
+    "print('FR2: ', np.round(FR2, 2))\n",
+    "\n",
+    "Ai += AFR3\n",
+    "FR3 = np.sqrt(1/np.pi*Ai)\n",
+    "R.append(FR3)\n",
+    "print('FR3: ', np.round(FR3, 2))\n",
+    "\n",
+    "Ai += AORR1\n",
+    "ORR1 = np.sqrt(1/np.pi*Ai)\n",
+    "R.append(ORR1)\n",
+    "print('ORR1: ', np.round(ORR1, 2))\n",
+    "\n",
+    "Ai += AORR2\n",
+    "ORR2 = np.sqrt(1/np.pi*Ai)\n",
+    "R.append(ORR2)\n",
+    "print('ORR2: ', np.round(ORR2, 2))\n",
+    "\n",
+    "ORR3 = 297.3\n",
+    "R.append(ORR3)\n",
+    "\n",
+    "R = np.array(R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 16.95831145  48.06523701  80.4460442  113.02939742 145.68124081\n",
+      " 172.31881817 205.97183589 239.37327269 295.356959  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Coolant channel radii\n",
+    "Ac = 120*np.pi*0.794**2 + 6*np.pi*0.635**2\n",
+    "AcR1 = 18*Ac\n",
+    "AcR2 = 24*Ac\n",
+    "AcR3 = 24*Ac\n",
+    "Actotal = AcR1 + AcR2 + AcR3\n",
+    "\n",
+    "RT = sum(R)\n",
+    "\n",
+    "t = (2*RT - np.sqrt(4*RT**2 - 36*Actotal/np.pi))/18\n",
+    "# print(t)\n",
+    "Rji = R - t\n",
+    "print(Rji)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ring one power density:  [3.874      4.442      5.029      5.64383333 6.44416667 7.68516667\n",
+      " 8.68933333 9.40183333 9.07566667 6.9985    ]\n",
+      "Ring two power density:  [3.03225  3.558375 4.165875 4.666125 5.269125 6.34175  7.041    7.49475\n",
+      " 7.0175   5.1685  ]\n",
+      "Ring three power density:  [3.2925   3.906125 4.554625 5.1155   5.817    7.08525  7.92825  8.464125\n",
+      " 7.896625 5.572875]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# power density averaged in the ring (divided into layers)\n",
+    "file = pd.read_csv('power.csv')\n",
+    "\n",
+    "# W/cm3\n",
+    "R1Fs = np.zeros(10)\n",
+    "for i in range(1, 7):\n",
+    "    fi = np.array(file['F'+str(i)].tolist())\n",
+    "    R1Fs += fi/6/1e6\n",
+    "\n",
+    "R2Fs = np.zeros(10)\n",
+    "for i in range(7, 15):\n",
+    "    fi = np.array(file['F'+str(i)].tolist())\n",
+    "    R2Fs += fi/8/1e6\n",
+    "\n",
+    "R3Fs = np.zeros(10)\n",
+    "for i in range(15, 23):\n",
+    "    fi = np.array(file['F'+str(i)].tolist())\n",
+    "    R3Fs += fi/8/1e6\n",
+    "\n",
+    "QR1s = R1Fs*AFR1/(AFR1-np.pi*(FR1**2-R[3]**2))\n",
+    "QR2s = R2Fs*AFR2/(AFR2-np.pi*(FR2**2-R[4]**2))\n",
+    "QR3s = R3Fs*AFR3/(AFR3-np.pi*(FR3**2-R[5]**2))\n",
+    "print('Ring one power density: ', QR1s)\n",
+    "print('Ring two power density: ', QR2s)\n",
+    "print('Ring three power density: ', QR3s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Re:  [126794.81959681 126794.81959681 126794.81959681 126794.81959681\n",
+      " 126794.81959681 126794.81959681 126794.81959681 126794.81959681\n",
+      " 126794.81959681]\n",
+      "Pr:  0.37637041951219513\n",
+      "Nu:  [188.12877923 188.12877923 188.12877923 188.12877923 188.12877923\n",
+      " 188.12877923 188.12877923 188.12877923 188.12877923]\n",
+      "h:  [1984.84745186 1984.84745186 1984.84745186 1984.84745186 1984.84745186\n",
+      " 1984.84745186 1984.84745186 1984.84745186 1984.84745186]\n",
+      "ki:  [0.00198543 0.00198505 0.00198497 0.00198494 0.00198492 0.00198491\n",
+      " 0.0019849  0.00198489 0.00198488]\n",
+      "ko:  [0.00198537 0.00198505 0.00198497 0.00198493 0.00198491 0.0019849\n",
+      " 0.0019849  0.00198489 0.00198488]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# film thermal conductivity\n",
+    "rho = 5.7030  # [kg/m3] 6.4 MPa 259 C\n",
+    "cp = 5.188  # [J/g/K] 6.4 MPa 259 C [2]\n",
+    "cp *= 1e3  # [J/kg/K]\n",
+    "mu = 2.9744e-5  # Pa.s 6.4 MPa 259 C\n",
+    "v = 1701.71  # cm/s\n",
+    "v /= 100  # m/s\n",
+    "\n",
+    "ri = Rji/100 # m\n",
+    "ro = R/100\n",
+    "Ah = np.pi*(ro**2-ri**2)\n",
+    "Ph = 2*np.pi*(ri+ro)\n",
+    "Dh = 4*Ah/Ph\n",
+    "Re = rho * v * Dh / mu\n",
+    "print('Re: ', Re)\n",
+    "\n",
+    "k = 0.41 # W/m/K\n",
+    "Pr = mu * cp/k\n",
+    "print('Pr: ', Pr)\n",
+    "\n",
+    "Nu = 0.023*(Re**0.8)*(Pr**0.4)\n",
+    "print('Nu: ', Nu)\n",
+    "h = Nu/Dh * k  # W/m^2/K\n",
+    "print('h: ', h)\n",
+    "\n",
+    "h /= 1e4  # W/cm^2/K\n",
+    "\n",
+    "ri *= 100  # cm\n",
+    "ro *= 100  # cm\n",
+    "dr = 0.01  # cm\n",
+    "\n",
+    "kgci = h * (ri + dr) * np.log(1 + dr/ri)\n",
+    "kgco = h * (ro + dr) * np.log(1 + dr/ro)\n",
+    "print('ki: ', kgci)  # W/cm/C\n",
+    "print('ko: ', kgco)  # W/cm/C"
    ]
   },
   {
